src/objects/Image_Classification__e.object
<CustomObject>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <label>Confidence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Image Classification</label>
    <pluralLabel>Image Classifications</pluralLabel>
</CustomObject>